add fourth marker

--- a/public/tournamenter-obr/views/rescue_scorer_2016_nacional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2016_nacional.html
@@ -17,7 +17,7 @@
 			<div class="thumbnail">
 				<h3>Ladrilhos</h3>
 
-        <div ng-repeat="mark in [1, 2, 3]">
+        <div ng-repeat="mark in [1, 2, 3, 4]">
           <h5>{{mark}}º Marcador</h5>
           <div class="row">
 
