--- a/public/tournamenter-obr/obr-config.ejs
+++ b/public/tournamenter-obr/obr-config.ejs
@@ -1,42 +1,20 @@
-<!-- lol -->
-<!doctype html>
-<!-- <html manifest="app.appcache"> -->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-  <title>Importador Sistema Olimpo</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<link rel="stylesheet" href="/tournamenter-obr/components/font-awesome/font-awesome.css">
+<link rel="stylesheet" href="/tournamenter-obr/components/bootstrap/bootstrap.css">
+<link rel="stylesheet" href="/tournamenter-obr/styles/site.css">
 
-  <!-- <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'> -->
-  <link rel="stylesheet" href="components/font-awesome/font-awesome.css">
-  <link rel="stylesheet" href="components/bootstrap/bootstrap.css">
-  <!-- <link rel="stylesheet" href="components/bootstrap/bootstrap-theme.min.css"> -->
-  <!-- <link rel="stylesheet" href="components/circliful/css/jquery.circliful.css"> -->
-  <link rel="stylesheet" href="styles/site.css">
+<style type="text/css">
+.ended{
+  background-color: rgba(255,20,20,0.7);
+  background-image: none;
+}
+.hide {
+  display: none;
+}
+</style>
 
-  <!-- WebApp -->
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" sizes="128x128" href="img/icon.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="apple-touch-icon" sizes="128x128" href="img/icon.png">
-  <link rel="apple-touch-icon-precomposed" sizes="128x128" href="img/icon.png">
+<div data-ng-app="app" id="app-root" data-ng-controller="AppCtrl">
 
-  <style type="text/css">
-  .ended{
-    background-color: rgba(255,20,20,0.7);
-    background-image: none;
-  }
-  .hide {
-    display: none;
-  }
-  </style>
-
-</head>
-<body data-ng-app="app" id="app-root" data-ng-controller="AppCtrl">
-
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
 
       <div class="pull-left">
@@ -48,8 +26,8 @@
 
     </div>
   </nav>
-
-  <div class="container hide" style="padding-top: 90px;" ng-class="{hide: !loaded}">
+ -->
+  <div class="container hide" ng-class="{hide: !loaded}">
 
     <!-- Importar equipes -->
     <div class="col-md-6" ng-controller="ImportarCtrl">
@@ -284,26 +262,26 @@
     </div>
   </div>
   <!-- build:js scripts/vendor.js -->
-  <script src="components/async/async.js"></script>
-  <script src="components/underscore/underscore.js"></script>
-  <script src="components/moment/moment.js"></script>
-  <script src="components/moment/pt-br.js"></script>
-  <script src="components/jquery/jquery.js"></script>
-  <script src="components/angular/angular.js"></script>
-  <script src="components/angular-route/angular-route.js"></script>
-  <script src="components/angular-animate/angular-animate.js"></script>
-  <script src="components/angular-resource/angular-resource.js"></script>
-  <script src="components/angular-bootstrap/ui-bootstrap.js"></script>
-  <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="/tournamenter-obr/components/async/async.js"></script>
+  <script src="/tournamenter-obr/components/underscore/underscore.js"></script>
+  <script src="/tournamenter-obr/components/moment/moment.js"></script>
+  <script src="/tournamenter-obr/components/moment/pt-br.js"></script>
+  <script src="/tournamenter-obr/components/jquery/jquery.js"></script>
+  <script src="/tournamenter-obr/components/angular/angular.js"></script>
+  <script src="/tournamenter-obr/components/angular-route/angular-route.js"></script>
+  <script src="/tournamenter-obr/components/angular-animate/angular-animate.js"></script>
+  <script src="/tournamenter-obr/components/angular-resource/angular-resource.js"></script>
+  <script src="/tournamenter-obr/components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="/tournamenter-obr/components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <!-- endbuild -->
 
   <!-- build:js scripts/site-ui.js -->
   <!-- endbuild -->
 
   <!-- build:js({.tmp,client}) scripts/participar.js -->
-  <script src="importar_scripts/app.js"></script>
-  <script src="importar_scripts/importar.js"></script>
-  <script src="importar_scripts/exportar.js"></script>
+  <script src="/tournamenter-obr/importar_scripts/app.js"></script>
+  <script src="/tournamenter-obr/importar_scripts/importar.js"></script>
+  <script src="/tournamenter-obr/importar_scripts/exportar.js"></script>
   <!-- endbuild -->
-</body>
-</html>
+</div>
+<!-- </html> -->
