Implement desafio surpresa

--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -29,7 +29,7 @@
   </div>
 
   <div class="col-md-6 col-sm-6">
-    <a href="/tournamenter-obr" target="_blank" class="no-decoration">
+    <a href="/obr-desafio" target="_blank" class="no-decoration">
       <div class="jumbotron">
         <h1 class="text-center"><i class="fa fa-question" aria-hidden="true"></i></h1>
         <br/>
