Add manual to home and menu

--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -41,3 +41,27 @@
   </div>
 
 </div>
+
+<div class="col-md-8 col-md-offset-2">
+  <div class="col-md-12 col-sm-12">
+    <!-- <div class="alert alert-info">
+      <div class="pull-right">
+        <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+      </div>
+      <a href="/ManualOBRTournamenter.pdf" target="_blank">
+        Manual do Tournamenter
+        <small>(Para Juizes)</small>
+      </a>
+    </div> -->
+
+    <div class="alert alert-danger">
+      <div class="pull-right">
+        <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+      </div>
+      <a href="/ManualOBRTournamenter.pdf" target="_blank">
+        Manual do Tournamenter Completo
+        <small>(Para Organização)</small>
+      </a>
+    </div>
+  </div>
+</div>
