Unify API in one place

--- a/public/tournamenter-obr/obr-config.ejs
+++ b/public/tournamenter-obr/obr-config.ejs
@@ -291,6 +291,7 @@
   <!-- endbuild -->
 
   <!-- build:js({.tmp,client}) scripts/participar.js -->
+  <script src="/tournamenter-obr/scripts_api/api.js"></script>
   <script src="/tournamenter-obr/scripts_config/app.js"></script>
   <script src="/tournamenter-obr/scripts_config/importar.js"></script>
   <script src="/tournamenter-obr/scripts_config/exportar.js"></script>
