--- a/public/tournamenter-obr/obr-desafio.ejs
+++ b/public/tournamenter-obr/obr-desafio.ejs
@@ -148,6 +148,7 @@
   <!-- build:js scripts/site-ui.js -->
   <!-- endbuild -->
 
+  <script src="/tournamenter-obr/scripts_api/api.js"></script>
   <script src="/tournamenter-obr/scripts_desafio/app.js"></script>
   <script src="/tournamenter-obr/scripts_desafio/desafio.js"></script>
   <!-- endbuild -->
