--- a/public/tournamenter-obr/views/rescue_scorer_2017_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2017_regional.html
@@ -90,7 +90,7 @@
           <span class="input-group-addon">{{sumSpecial(scorings.speedbump, ['A','B','C','D','E','F','G','H'])}} pts</span>
         </div>
 
-        <h5>Interceções</h5>
+        <h5>Intersecções</h5>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default"
             ng-model="scoreData.intersection[k]"
