--- a/public/tournamenter-obr/obr-rounds.ejs
+++ b/public/tournamenter-obr/obr-rounds.ejs
@@ -171,7 +171,7 @@ table .header {
           <!-- Default panel contents -->
           <div class="panel-heading">
             <div class="pull-right" style="margin-top: -2px;">
-              <button class="btn btn-info btn-xs" ng-click="copyMarkdown(table)">Copiar Markdown</button>
+              <button class="btn btn-info btn-xs" ng-click="copyMarkdown(table, tables[selTable].name, $index + 1)">Copiar Markdown</button>
             </div>
             <h3 class="panel-title">
               {{tables[selTable].name}} - Rodada {{$index + 1}}
