Add needs update message

--- a/public/tournamenter-obr/obr-home.ejs
+++ b/public/tournamenter-obr/obr-home.ejs
@@ -6,6 +6,17 @@
   }
 </style>
 
+<% if (newestVersion) { %>
+<div class="col-md-8 col-md-offset-2" style="padding-top: 20px;">
+  <div class="col-md-12">
+    <div class="alert alert-danger">
+      <strong>O plugin da OBR possui uma atualização.</strong>
+      Atualize o quanto antes para a versão <span class="label label-warning"><%= newestVersion %></span>
+    </div>
+  </div>
+</div>
+<% } %>
+
 <div class="col-md-8 col-md-offset-2" style="padding-top: 20px;">
   <div class="col-md-12">
     <div class="alert alert-warning">
@@ -54,7 +65,7 @@
       </a>
     </div> -->
 
-    <div class="alert alert-danger">
+    <div class="alert alert-info">
       <div class="pull-right">
         <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
       </div>
