Fix disabled button

--- a/public/tournamenter-obr/views/scorer.html
+++ b/public/tournamenter-obr/views/scorer.html
@@ -55,7 +55,7 @@
 					<button type="button" class="btn btn-success" ng-click="selectScoredTeam();" ng-class="{disabled: timer.data.state == 'RUNNING'}">Salvar<span class="hidden-xs"></span></button>
 				</div>
 
-				<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-class="{disabled: timer.data.state == 'RUNNING'}">
 					<span class="caret"></span>
 					<span class="sr-only">Toggle Dropdown</span>
 				</button>
