--- a/public/tournamenter-obr/obr-desafio.ejs
+++ b/public/tournamenter-obr/obr-desafio.ejs
@@ -141,7 +141,8 @@
             </div>
 
             <span class="fa fa-unlock"></span>
-            Desafio {{id}}: <strong>{{selectedScore['desafio'+id]}}</strong>
+            Desafio {{id}}:
+            <div style="font-weight: bold;">{{selectedScore['desafio'+id]}}</div>
           </div>
         </div>
         
